--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,13 +24,19 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       
+      - name: Prepare deployment
+        run: |
+          mkdir -p _site
+          cp index.html _site/
+          cp -r codelabs _site/
+      
       - name: Setup Pages
         uses: actions/configure-pages@v4
       
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './codelabs'
+          path: '_site'
       
       - name: Deploy to GitHub Pages
         id: deployment
