--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,7 @@ jobs:
           mkdir -p _site
           cp index.html _site/
           cp -r codelabs _site/
+          touch _site/.nojekyll
       
       - name: Setup Pages
         uses: actions/configure-pages@v4
