--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,20 +24,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       
-      - name: Prepare deployment
-        run: |
-          mkdir -p _site
-          cp index.html _site/
-          cp -r codelabs _site/
-          touch _site/.nojekyll
-      
       - name: Setup Pages
         uses: actions/configure-pages@v4
       
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: '_site'
+          path: './codelabs'
       
       - name: Deploy to GitHub Pages
         id: deployment
