feat: add server management tools and documentation
- Added comprehensive SERVER-MANAGEMENT.md guide with detailed instructions for running and troubleshooting the development server
- Added new `npm run stop` command and stop.sh script to gracefully shutdown the server
- Updated README.md and QUICKSTART.md with server stop instructions
- Enhanced package.json with new stop script command for better server lifecycle management

The changes focus on improving the server management experience by adding proper

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Interactive learning platform using Google Codelabs",
   "scripts": {
     "serve": "./serve.sh",
+    "stop": "./stop.sh",
     "new": "./new-codelab.sh",
     "export": "cd codelabs && go run github.com/googlecodelabs/tools/claat@latest export *.md",
     "export:single": "cd codelabs && go run github.com/googlecodelabs/tools/claat@latest export",
